--- a/index.html
+++ b/index.html
@@ -9,59 +9,7 @@
 <body>
 
   <div id="app">
-    <div class="product">
-
-      <div class="product-image">
-        <!-- Сокращённый вариант директивы v-bind выглядит как : -->
-        <img v-bind:src="image" :alt="altText"/>
-      </div>
-
-      <div class="product-info">
-        <h1>{{ title }}</h1>
-        <p v-if="inStock">In Stock</p>
-        <!-- привязка стиля -->
-        <p
-        v-else
-        :class="{outOfStock: !inStock}"
-        >
-        Out of Stock</p>
-        <!-- <span v-show="onSale">On Sale</span> -->
-        <p>{{ sale }}</p>
-        <p>Details:</p>
-        <ul>
-          <li v-for="detail in details">{{ detail }}</li>
-        </ul>
-        <!-- Сокращённый вариант директивы v-on выглядит как @ -->
-        <div
-        class="color-box"
-        v-for="(variant, index) in variants"
-        :key="variant.variantId"
-        :style="{ backgroundColor:variant.variantColor }"
-        @mouseover="updateProduct(index)"
-        >
-
-      </div>
-      <div class="sizes-inner">
-        <div class="sizes" v-for="size in sizes">
-          {{ size }}
-        </div>
-      </div>
-
-      <button
-      v-on:click="addToCart"
-      :disabled="!inStock"
-      :class="{ disabledButton: !inStock }"
-      >Add to cart</button><br>
-      <button v-on:click="delFromCart">Delete from cart</button>
-    </div>
-
-  </div>
-
-  <a :href="link">More products like this.</a>
-
-  <div class="cart">
-    <p>Cart({{ cart }})</p>
-  </div>
+<product :premium="premium"></product>
 
 </div>
 
