--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <script src="https://unpkg.com/vue"></script>
 </head>
 <body>
-
+<header>
+  <div class="nav-bar">
+  </div>
+</header>
   <div id="app">
 <product :premium="premium"></product>
 
 </div>
-
 
 <script src="main.js"></script>
 </body>
